[package]
name = "wgpu-bp"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu    = "22.1"
winit   = { version = "0.30", features = ["rwh_05"] }
instant = { version = "0.1",  features = ["wasm-bindgen"] }

log        = "0.4"
env_logger = "0.11"

anyhow   = "1.0"
cfg-if   = "1.0"
pollster = "0.3"

[lib]
name = "lib"
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "22.1", features = ["webgl"] }
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

console_log = "1.0"
console_error_panic_hook = "0.1"
